--- a/.github/workflows/sbom-vex-scan.yml
+++ b/.github/workflows/sbom-vex-scan.yml
@@ -12,44 +12,26 @@ jobs:
       fail-fast: false
       matrix:
         project: [ "dvna", "vulnado" ]
-        cdx_spec_version: ["1.5"]
-        include:
-          - project: vulnado
-            cdx_spec_version: "1.5"
-            cdx_image: ghcr.io/cyclonedx/cdxgen-java:v10
-          - project: dvna
-            cdx_spec_version: "1.5"
-            cdx_image:  quay.io/pluribus_one/sbom_vex_scanner@sha256:4c93316f95a2fe12bd2683ec34ff36d8e3a29501c797fb4825e7e510bab29ce3
-
-    container:
-      image: ${{matrix.cdx_image}}
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Generate SBOMs
-        run: |
-          cd vuln_apps/${{ matrix.project }}
-          cdxgen \
-          --format json \
-          --spec-version="${{matrix.cdx_spec_version}}" \
-          --project-name="${{ matrix.project }}" \
-          --project-version="build-${{ github.run_number }}" \
-          -o "${{ matrix.project }}_bom.json"
-
-      - name: Generate VEXs (JSON)
+      - name: Generate VEXs (Human)
         uses: aquasecurity/trivy-action@0.28.0
         with:
-          scan-type: "fs"
-          scan-ref: "./vuln_apps/${{ matrix.project }}/${{ matrix.project }}_bom.json"
-          format: cyclonedx
-          output: "vuln_apps/${{ matrix.project }}/${{ matrix.project }}_vex.json"
+          scan-type: fs
+          format: table
+          output: ${{ matrix.project }}.vex
+          scan-ref: ./vuln_apps/${{ matrix.project }}
+        env:
+          TRIVY_DB_REPOSITORY: "ghcr.io/aquasecurity/trivy-db,public.ecr.aws/aquasecurity/trivy-db"
+          TRIVY_JAVA_DB_REPOSITORY: "ghcr.io/aquasecurity/trivy-java-db,public.ecr.aws/aquasecurity/trivy-java-db"
 
       - name: Upload results
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: sbom-vex-${{ matrix.project }}-jsons
-          path: vuln_apps/**/${{ matrix.project }}_*
+          name: vex-${{ matrix.project }}
+          path: ${{ matrix.project }}.vex
           retention-days: 5
