--- a/.github/workflows/zaproxy.yml
+++ b/.github/workflows/zaproxy.yml
@@ -10,12 +10,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        cluster_ip: [18.185.179.187]
-        port: [31546,31547]
+        port: [31547]
 
     steps:
       - name: ZAP Scan
         uses: zaproxy/action-full-scan@v0.11.0
         with:
-          target: http://${{ matrix.cluster_ip }}:${{ matrix.port}}
-          artifact_name: zap_scan_${{ matrix.cluster_ip }}_${{ matrix.port }}
+          target: http://${{ secrets.CLUSTER_IP }}:${{ matrix.port}}
+          artifact_name: zap_scan_${{ secrets.CLUSTER_IP }}_${{ matrix.port }}
