--- a/kube/apps/frontend-service.yaml
+++ b/kube/apps/frontend-service.yaml
@@ -14,6 +14,7 @@ spec:
   ports:
     # the port that this service should serve on
   - port: 80
+    nodePort: 31547
   selector:
     app: guestbook
     tier: frontend
