--- a/.github/workflows/vuln_man.yml
+++ b/.github/workflows/vuln_man.yml
@@ -95,43 +95,43 @@ jobs:
           if-no-files-found: error
 
 ## Exercise Merge multiple SBOMs
-  # merge-sbom:
-  #   name: Merge previously generated SBOM
-  #   runs-on: ubuntu-latest
-  #   needs: ["sbom", "sbom-docker"]
-  #   container: cyclonedx/cyclonedx-cli:0.27.1
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       project: ["dvna", "vulnado"]
+  merge-sbom:
+    name: Merge previously generated SBOM
+    runs-on: ubuntu-latest
+    needs: ["sbom", "sbom-docker"]
+    container: cyclonedx/cyclonedx-cli:0.27.1
+    strategy:
+      fail-fast: false
+      matrix:
+        project: ["dvna", "vulnado"]
 
-  #   steps:
-  #     - name: Download artifact sbom
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         name: sbom-${{matrix.project}}
-  #         path: ./sboms-${{matrix.project}}
+    steps:
+      - name: Download artifact sbom
+        uses: actions/download-artifact@v4
+        with:
+          name: sbom-${{matrix.project}}
+          path: ./sboms-${{matrix.project}}
 
-  #     - name: Download artifact sbom-docker
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         name: sbom-${{matrix.project}}-docker
-  #         path: ./sboms-${{matrix.project}}
+      - name: Download artifact sbom-docker
+        uses: actions/download-artifact@v4
+        with:
+          name: sbom-${{matrix.project}}-docker
+          path: ./sboms-${{matrix.project}}
 
-  #     - name: Merge previously generated sboms
-  #       run: >
-  #         cyclonedx merge
-  #         --input-files file1.json file2.json…
-  #         --output-file output.json
-  #         --name output-project-name
-  #         --version "build-${{ github.run_number }}"
-  #         --hierarchical
-  #         --group devsecops-exercises
+      - name: Merge previously generated sboms
+        run: >
+          cyclonedx merge
+          --input-files sboms-${{matrix.project}}/${{ matrix.project }}_bom.json sboms-${{matrix.project}}/${{ matrix.project }}-docker_bom.json
+          --output-file ${{ matrix.project }}_merged_sbom.json
+          --name ${{ matrix.project }}
+          --version "build-${{ github.run_number }}"
+          --hierarchical
+          --group devsecops-exercises
 
-  #     - name: upload Artifacts
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: sbom-${{matrix.project}}-merged
-  #         path: ${{ matrix.project }}_merged_sbom.json
-  #         retention-days: 5
-  #         if-no-files-found: error
+      - name: upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: sbom-${{matrix.project}}-merged
+          path: ${{ matrix.project }}_merged_sbom.json
+          retention-days: 5
+          if-no-files-found: error
